Added server list functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 find_package(cpr REQUIRED)
 find_package(cryptopp REQUIRED)
 find_package(QuickJS REQUIRED)
+find_package(LibXml2 REQUIRED)
 find_quickjs()
 configure_quickjs()
 
@@ -15,5 +16,4 @@ file(GLOB files_aternos CONFIGURE_DEPENDS "src/*.h" "src/*.cpp" "src/*.c")
 
 add_executable(scraper ${files_aternos})
 target_include_directories(scraper PRIVATE ${QUICKJSPP_INCLUDE_DIRS})
-message(STATUS ${QUICKJSPP_INCLUDE_DIRS})
-target_link_libraries(scraper PRIVATE ${QUICKJS_LIBRARY} cpr::cpr cryptopp::cryptopp)
+target_link_libraries(scraper PRIVATE ${QUICKJS_LIBRARY} ${LIBXML2_LIBRARIES} cpr::cpr cryptopp::cryptopp)
